<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/sens_r_t_rleri"
            android:textColor="#A1887F"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_accelerometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_sensor"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"
            android:layout_marginBottom="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_compass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compass_sensor"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"
            android:layout_marginBottom="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_gyroscope"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyroscope_sensor"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"
            android:layout_marginBottom="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/humidity_sensor"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"
            android:layout_marginBottom="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_sensor"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"
            android:layout_marginBottom="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_magnetometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/magnetometer_sensor"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"
            android:layout_marginBottom="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressure_sensor"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"
            android:layout_marginBottom="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_proximity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proximity_sensor"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"
            android:layout_marginBottom="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_thermometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thermometer_sensor"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"
            android:layout_marginBottom="10dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>